[package]
name = "hasc_port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"

[profile.dev]
opt-level = 3
debug = false
rpath = false
lto = "thin"
debug-assertions = false
codegen-units = 8
panic = "unwind"
incremental = false
overflow-checks = false
